--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="root">
 			<div class="nav" id="a">
-				<div id="navr"><h3><b>SOWMIYAN</b></h3></div>
+				<div id="navr"><h3><b>DEEPAN</b></h3></div>
 				<div id="navl">
 					<div id="em"><a href="#a">HOME</a></div>
 					<div id="em"><a href="#b">BIO</a></div>
@@ -25,7 +25,7 @@
 				</div>
 				<div id="biog">
 					<div>
-						<h2>Sowmiyan</h2>
+						<h2>Deepan</h2>
 					</div>
 					<div>
 						<p>I am a passionate Engineer with a degree in Information Technology Engineering. My very first experience with code was at the time when I started my own blog. My struggle to customize the blog pages introduced me to HTML & CSS. Sooner, the excitment of having the power to structure pages on my own sounded amazing and that's when I decided to pursue Web development.</p>
